--- a/index.html
+++ b/index.html
@@ -408,8 +408,7 @@
             <a href="#">
               <div class="img-card-activites">
                 <img class="zoom-photo-card"
-                  src="assets/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port"
-                  style="height:100%">
+                  src="assets/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port">
               </div>
               <div class="card-activites-title">
                 <h2>Vieux Port</h2>
@@ -420,9 +419,8 @@
             <div class="card-activites-petite">
               <a href="#">
                 <div class="img-card-activites-petite" id="pomegues">
-                  <img class="zoom-photo-card"
-                    src="assets/images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues"
-                    style="width:100%">
+                  <img class="zoom-photo-card-petite"
+                    src="assets/images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
                 </div>
                 <div class="card-activites-title">
                   <h2>Fort de Pomègues</h2>
@@ -432,8 +430,8 @@
             <div class="card-activites-petite">
               <a href="#">
                 <div class="img-card-activites-petite" id="frioul">
-                  <img class="zoom-photo-card" src="assets/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
-                    alt="Îles du Frioul" style="width:100%">
+                  <img class="zoom-photo-card-petite" src="assets/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
+                    alt="Îles du Frioul">
                 </div>
                 <div class="card-activites-title">
                   <h2>Îles du Frioul</h2>
@@ -446,7 +444,7 @@
               <div class="img-card-activites">
                 <img class="zoom-photo-card"
                   src="assets/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
-                  alt="Parc National des Calanques" style="height:100%">
+                  alt="Parc National des Calanques">
               </div>
               <div class="card-activites-title">
                 <h2>Parc National des Calanques</h2>
@@ -457,9 +455,9 @@
             <div class="card-activites-petite">
               <a href="#">
                 <div class="img-card-activites-petite" id="lagarde">
-                  <img class="zoom-photo-card"
+                  <img class="zoom-photo-card-petite"
                     src="assets/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
-                    alt="Notre-Dame-de-la-Garde" style="width:100%">
+                    alt="Notre-Dame-de-la-Garde">
                 </div>
                 <div class="card-activites-title">
                   <h2>Notre-Dame-de-la-Garde</h2>
@@ -469,8 +467,8 @@
             <div class="card-activites-petite">
               <a href="#">
                 <div class="img-card-activites-petite" id="longchamp">
-                  <img class="zoom-photo-card" src="assets/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
-                    alt="Parc Longchamp" style="width:100%">
+                  <img class="zoom-photo-card-petite" src="assets/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
+                    alt="Parc Longchamp">
                 </div>
                 <div class="card-activites-title">
                   <h2>Parc Longchamp</h2>
