Finalisation responsive complet et valide W3C

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mon projet 2</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -75,8 +75,8 @@
           </p>
         </div>
       </section>
-      <section id="section-hebergements" class="logements">
-        <article class="hebergements">
+      <div class="logements">
+        <section class="hebergements">
           <div class="hebergements-title">
             <h1>Hébergements à Marseille</h1>
           </div>
@@ -289,8 +289,8 @@
           <div class="afficher-plus">
             <a href="#">Afficher plus</a>
           </div>
-        </article>
-        <article class="populaires">
+        </section>
+        <section class="populaires">
           <div class="populaires-title">
             <h1>Les plus populaires</h1>
             <i class="fa-solid fa-chart-line"></i>
@@ -399,8 +399,8 @@
               </div>
             </a>
           </div>
-        </article>
-      </section>
+        </section>
+      </div>
       <section id="lien-activites" class="section-activites">
         <h1 class="activites-title">Activités à Marseille</h1>
         <div class="activites-content">
@@ -481,7 +481,7 @@
     </main>
     <footer>
       <nav class="menu-footer">
-        <div class="liens-footer">
+        <div class="liens-footer grand-bloc">
           <ul>
             <li class="titre-liens-footer">A propos</li>
             <li>
@@ -495,14 +495,14 @@
             </li>
           </ul>
         </div>
-        <div class="liens-footer">
+        <div class="liens-footer moyen-bloc">
           <ul>
             <li class="titre-liens-footer">Nos hébergements</li>
             <li><a href="#">Charte qualité</a></li>
             <li><a href="#">Soumettre votre hôtel</a></li>
           </ul>
         </div>
-        <div class="liens-footer">
+        <div class="liens-footer petit-bloc">
           <ul>
             <li class="titre-liens-footer">Assistance</li>
             <li><a href="#">Centre d'aide</a></li>
