--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </nav>
     </header>
     <main>
-      <section class="recherche">
+      <section id="section-hebergements" class="recherche">
         <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
         <p>En plein centre-ville ou en pleine nature</p>
         <form class="search-form">
