--- a/index.html
+++ b/index.html
@@ -485,13 +485,13 @@
           <ul>
             <li class="titre-liens-footer">A propos</li>
             <li>
-              <a href="">Fonctionnement du site</a>
+              <a href="#">Fonctionnement du site</a>
             </li>
             <li>
-              <a href="">Conditions générales de vente</a>
+              <a href="#">Conditions générales de vente</a>
             </li>
             <li>
-              <a href="">Données et confidentialité</a>
+              <a href="#">Données et confidentialité</a>
             </li>
           </ul>
         </div>
