Correction ancre lien hebergement

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </nav>
     </header>
     <main>
-      <section id="section-hebergements" class="recherche">
+      <section class="recherche">
         <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
         <p>En plein centre-ville ou en pleine nature</p>
         <form class="search-form">
@@ -76,7 +76,7 @@
         </div>
       </section>
       <div class="logements">
-        <section class="hebergements">
+        <section id="section-hebergements" class="hebergements">
           <div class="hebergements-title">
             <h1>Hébergements à Marseille</h1>
           </div>
